--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
       <artifactId>lettuce-core</artifactId>
       <version>5.0.2.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.20</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
